# SJTU_Canvas2Note

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  POST.md  README.md  SHOWCASE.md  build_frontend.py  cli.py  config.py  live_monitor.py  llm_client.py  pipeline.py  pyproject.toml  server.py  test_vlm.py  vlm_client.py  期中论文参考资料.md
.github/workflows/: ci.yml  tauri.yml
asr/: frame_extractor.py  transcriber.py
canvas/: client.py  jaccount.py  translate_client.py  video_client.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: ChatPanel.tsx  FileManager.tsx  FilesTab.tsx  NotesTab.tsx  SettingsModal.tsx  Sidebar.tsx  Toast.tsx  TranscriptionsTab.tsx  VideosTab.tsx  icons.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  EmptyState.tsx  IconButton.tsx  Input.tsx  Modal.tsx  Progress.tsx  Skeleton.tsx
frontend/src/hooks/: index.ts  useKeyboard.ts  useTheme.ts
notes/: generator.py
parser/: doc_parser.py
