[project]
name = "canvas2note"
version = "0.1.0"
description = "Canvas lecture notes: download → transcribe → parse → LLM notes"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.0",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.26",
    "python-pptx>=1.0.2",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
asr = [
    "faster-whisper",
    "torch>=2.3.0",
]
funasr = [
    "modelscope>=1.36.0",
    "torch>=2.3.0",
]

[project.scripts]
canvas2note = "pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["canvas", "asr", "notes", "parser"]

[tool.hatch.build.targets.wheel.force-include]
"pipeline.py" = "pipeline.py"
"server.py" = "server.py"
"cli.py" = "cli.py"
"config.py" = "config.py"
"llm_client.py" = "llm_client.py"
"vlm_client.py" = "vlm_client.py"
