[package]
name = "canvas2note"
version = "0.1.0"
description = "SJTU Course Recording → Transcript → AI Notes"
authors = ["Canvas2Note"]
edition = "2021"

[lib]
name = "canvas2note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
